# okcoin_bot

./: CMakeLists.txt  README.md  configure.h  dump.h  log.h  okbot.cpp  pipeline.h  trade.h
lib/cpptoml-master-20170107/: CMakeLists.txt
lib/gtest-1.8.0/src/: gtest-internal-inl.h
lib/gtest-1.8.0/test/: gtest-unittest-api_test.cc
lib/spdlog-master-20170108/: CMakeLists.txt  README.md
lib/spdlog-master-20170108/tests/: CMakeLists.txt  includes.h
off_analysis/R_script/: plot_roc_kline.R
okcoin_client/: md5.cpp  md5.h  okcoinwebsocketapi.cpp  okcoinwebsocketapi.h  parameter.cpp  string.cpp  websocket.h
rest_api/: rest_client.h
rest_api/net/http/curl/: curl.cpp  curl.h  curlprotocol.cpp  curlprotocol.h  md5.cpp  okcoinapi.cpp  str.cpp  str.h  uri.cpp  uri.h
strategy/: account_status.h  asset_freeze.h  roc_strategy.h  tech_index.h
test/email/: test_email.cpp.cpp
test/okapi_test/: ok_rest_api_test.cpp
test/rapidjson/: test_json.cpp
util/: Timer.h  calc_util.h  email_client.h  json_util.cpp  json_util.h  numeric_util.h  queue.h  singleton.h  time_util.h  time_window.h  window.h
